test/semantic-errors/2.pas
program p;
begin var var:integer end.
